--- a/404.md
+++ b/404.md
@@ -3,10 +3,11 @@ permalink: /404.html
 ---
 > **Note:** You accessed a link that returned a 404, probably by clicking one of the plugin links. You're supposed to copy the link address and add it into Vendetta.
 
-# Vendetta Plugins Template
-This repo contains a template for creating [Vendetta](https://github.com/vendetta-mod/Vendetta) plugins.
+# Vendetta Plugins
 
-# How to install?
-Paste a plugin URL into the Plugins page of Vendetta, following a basic format of:
+"I don't do mobile dev"  
+ -- Yellowsink 2020  
+ -- Yellowsink 2021  
+ -- Yellowsink 2022  
+ -- ~~Yellowsink 2023~~
 
-https://`YOUR_GITHUB_USERNAME`.github.io/`REPO_NAME`/`PLUGIN_NAME`
